feat: introduce htmx and rewrite the Booker views arround it